Update parsing program to finalized version, needs conversion to .py files now.

--- a/parsing program.ipynb
+++ b/parsing program.ipynb
@@ -7,13 +7,16 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T18:01:57.729002Z",
      "start_time": "2020-07-24T18:01:57.266876Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "import pickle\n",
     "from collections import Counter\n",
     "from datetime import time, datetime\n",
+    "\n",
+    "import re\n",
     "\n",
     "from tqdm import tqdm \n",
     "\n",
@@ -49,13 +52,14 @@
      "data": {
       "text/plain": [
        "{'id': '1567603412:2019-2020:0:1576851265.755613:1567603412.1838334878321:2019-12-20 14:16:56 +0000',\n",
-       " 'date': '2019-12-20',\n",
+       " 'event_id': '1567603412:2019-2020:0:1576851265.755613',\n",
        " 'weight': '132',\n",
        " 'scoring_events': '1*11*0*T2*Green#2*0*0*R2*Red#2*30*0*P1*Red#2*50*0*N2*Red#5*17*0*R2*Green#5*17*0*P1*Green#5*48*0*P1*Red#6*9*0*E1*Red',\n",
        " 'winner': 1,\n",
        " 'result': 'Decision 7-5',\n",
        " 'red_wrestler': '1567603412.1838334878321#Ivy, Tre#(null)#Ada#(null)',\n",
        " 'green_wrestler': '(null)#Doe, John#(null)#Niceville#(null)#',\n",
+       " 'our_wrestler': '1567603412.1838334878321',\n",
        " 'level': 'High School Boys'}"
       ]
      },
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T18:02:11.643877Z",
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T18:02:13.324963Z",
@@ -139,13 +143,42 @@
    "outputs": [],
    "source": [
     "def parse_date(match_id):\n",
-    "    regex = r\"(\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2})\"\n",
+    "    regex = r\"(\\d{4}-\\d{2}-\\d{2} (\\d{2}|\\d{1}):\\d{2}:\\d{2})\"\n",
     "    return datetime.strptime(re.search(regex, match_id).group(1), \"%Y-%m-%d %H:%M:%S\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '1478210371:2019-2020:0:603416838.326829:1478210371.9999999999:2020-02-15 5:28:30 PM +0000',\n",
+       " 'event_id': '1478210371:2019-2020:0:603416838.326829',\n",
+       " 'weight': '106',\n",
+       " 'scoring_events': '0*45*0*T2*Red#2*0*1*BOT*Red#2*31*1*E1*Red#4*1*2*BOT*Green#5*32*2*N3*Red#5*36*2*R2*Green#5*52*2*E1*Red',\n",
+       " 'winner': 1,\n",
+       " 'result': 'Decision 7-2',\n",
+       " 'red_wrestler': '(null)#Dan Valeria#(null)#Woodstock Marian Centralknown#(null)#',\n",
+       " 'green_wrestler': '1478210371.153787131#Husko, Colin#(null)#Wauconda#(null)',\n",
+       " 'our_wrestler': '1478210371.153787131',\n",
+       " 'level': 'High School Boys'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_matches[760589]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T18:02:14.217258Z",
@@ -163,26 +196,33 @@
     "        return \"green\"\n",
     "    else:\n",
     "        # this is a problem\n",
-    "        pass\n",
+    "        #print(f'focus color, exected \"red\" or \"green\", got {red!r} and {green!r}')\n",
+    "        return None\n",
     "    \n",
     "def parse_name(wrestler_string) -> str:\n",
     "    regex_search = r\"#(.*?)#\"\n",
     "    # Not flipped to maintain format across platform\n",
     "    name = re.findall(regex_search, wrestler_string)[0].split(\",\")\n",
-    "    return f\"{name[0].strip()}, {name[1].strip()}\" if len(name) > 1 else None\n",
-    "\n",
+    "    if len(name) > 1:\n",
+    "        if name[0].strip() == 'Forfeit':\n",
+    "            return \"Forfeit,\"\n",
+    "        return f\"{name[0].strip()}, {name[1].strip()}\".title()\n",
+    "    elif len(n := name[0].split()) > 1:\n",
+    "        return f\"{n[1].strip()}, {n[0].strip()}\".title()\n",
+    "    else:\n",
+    "        return name[0].strip().title()  #'Forfeit'\n",
     "\n",
     "def parse_team(wrestler_string) -> str:\n",
     "    regex_search = r\"#(.*?)#\"\n",
     "    team = re.findall(regex_search, wrestler_string)[1]\n",
     "    if \"(\" in team:\n",
-    "        return team.split(\"(\")[0]\n",
-    "    return team"
+    "        return team.split(\"(\")[0].title()\n",
+    "    return team.title()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T18:02:16.211125Z",
@@ -194,13 +234,14 @@
     "def create_focus_wrestler(wrestler_str: str, wrestler_list: List[Dict]):\n",
     "    wrestler_name = parse_name(wrestler_str)\n",
     "    # find wrestler in wrestler_list\n",
-    "    # no default because wrestler MUST be found\n",
-    "    raw_wrestler = next(w for w in wrestler_list if w[\"name\"] == wrestler_name)\n",
+    "    # default to wrestler string\n",
+    "    raw_wrestler = next((w for w in wrestler_list if w['name'].replace(' , ', ', ').strip().title() == wrestler_name), wrestler_name)\n",
     "    # create wrestler\n",
     "    wrestler = wrestling.Wrestler(\n",
     "        name=wrestler_name,\n",
     "        team=parse_team(wrestler_str),\n",
-    "        grade=wrestling.Mark(wrestler['grade'])\n",
+    "        # if not dict type then no grade (will default to Fr.)\n",
+    "        grade=wrestling.Mark(raw_wrestler['grade']) if isinstance(raw_wrestler, dict) else None,\n",
     "    )\n",
     "    return wrestler\n",
     "\n",
@@ -257,7 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "def create_hs_scoring(event_string):\n",
+    "def create_hs_scoring(event_string, focus):\n",
     "    ts_gen = parse_api_scoring_events(event_string)\n",
     "    temp = []\n",
     "    for action in ts_gen:\n",
@@ -272,7 +313,7 @@
     "    return tuple(sorted(temp))\n",
     "    \n",
     "    \n",
-    "def create_college_scoring(event_string):\n",
+    "def create_college_scoring(event_string, focus):\n",
     "    ts_gen = parse_api_scoring_events(event_string)\n",
     "    temp = []\n",
     "    for action in ts_gen:\n",
@@ -318,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T18:15:45.207883Z",
@@ -366,35 +407,230 @@
     "    # this is the final function\n",
     "    # we only directly call this for each match :)\n",
     "    F = get_focus(match)\n",
-    "    m = wrestling.CollegeMatch(\n",
-    "        id=match['id'],\n",
-    "        event=create_event(match['event_id'], event_list),\n",
-    "        date=parse_date(match['id']),\n",
-    "        result=wrestling.Result.LT,  # parse result function needed!\n",
-    "        focus=create_focus_wrestler(match['green_wrestler'] if F == 'green' else match['red_wrestler']),\n",
-    "        opponent=create_opponent_wrestler(match['green_wrestler'] if F == 'red' else match['red_wrestler']),\n",
-    "        weight=wrestling.Mark(match['weight']),\n",
-    "        time_series=create_college_scoring(match['scoring_events']),\n",
-    "    )\n",
-    "    return m\n",
+    "    if F:\n",
+    "        m = wrestling.CollegeMatch(\n",
+    "            id=match['id'],\n",
+    "            event=create_event(match['event_id'], event_list),\n",
+    "            date=parse_date(match['id']),\n",
+    "            result=wrestling.Result[parse_result(match)],\n",
+    "            focus=create_focus_wrestler(match['green_wrestler'] if F == 'green' else match['red_wrestler'], wrestler_list),\n",
+    "            opponent=create_opponent_wrestler(match['green_wrestler'] if F == 'red' else match['red_wrestler']),\n",
+    "            weight=wrestling.Mark(match['weight']),\n",
+    "            time_series=create_college_scoring(match['scoring_events'], F),\n",
+    "        )\n",
+    "        return m\n",
     "\n",
     "\n",
-    "def create_hs_match(match_dict):\n",
+    "def create_hs_match(match: Dict, event_list: List[Dict], wrestler_list: List[Dict]):\n",
     "    # call parsers and then creators\n",
     "    # this is the final function\n",
     "    # we only directly call this for each match :)\n",
     "    F = get_focus(match)\n",
-    "    m = wrestling.HSMatch(\n",
-    "        id=match['id'],\n",
-    "        event=create_event(match['event_id'], event_list),\n",
-    "        date=parse_date(match['id']),\n",
-    "        result=wrestling.Result.LT,  # parse result function needed!\n",
-    "        focus=create_focus_wrestler(match['green_wrestler'] if F == 'green' else match['red_wrestler']),\n",
-    "        opponent=create_opponent_wrestler(match['green_wrestler'] if F == 'red' else match['red_wrestler']),\n",
-    "        weight=wrestling.Mark(match['weight']),\n",
-    "        time_series=create_hs_scoring(match['scoring_events']),\n",
-    "    )\n",
-    "    return m"
+    "    if F:\n",
+    "        m = wrestling.HSMatch(\n",
+    "            id=match['id'],\n",
+    "            event=create_event(match['event_id'], event_list),\n",
+    "            date=parse_date(match['id']),\n",
+    "            result=wrestling.Result[parse_result(match)],\n",
+    "            focus=create_focus_wrestler(match['green_wrestler'] if F == 'green' else match['red_wrestler'], wrestler_list),\n",
+    "            opponent=create_opponent_wrestler(match['green_wrestler'] if F == 'red' else match['red_wrestler']),\n",
+    "            weight=wrestling.Mark(match['weight']),\n",
+    "            time_series=create_hs_scoring(match['scoring_events'], F),\n",
+    "        )\n",
+    "        return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "815758\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('all_matches.p', 'rb') as f:\n",
+    "    loaded_matches = pickle.load(f)\n",
+    "print(len(loaded_matches))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 55169/55169 [18:25<00:00, 49.89it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "ALLMATCHES = []\n",
+    "for match in tqdm(loaded_matches):\n",
+    "    if match['level'].startswith('High School'):\n",
+    "        # HS stuff\n",
+    "        m = create_hs_match(match, events, rosters)\n",
+    "        if m:\n",
+    "            ALLMATCHES.append(m)\n",
+    "    elif match['level'].startswith('College'):\n",
+    "        # college stuff\n",
+    "        m = create_college_match(match, events, rosters)\n",
+    "        if m:\n",
+    "            ALLMATCHES.append(m)\n",
+    "    else:\n",
+    "        pass\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del loaded_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Percent Matches w/ invalid tags: 35.0%'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invalid = list(filter(lambda x: x.isvalid is False, ALLMATCHES))\n",
+    "\n",
+    "valid = list(filter(lambda x: x.isvalid, ALLMATCHES))\n",
+    "\n",
+    "f\"Percent Matches w/ invalid tags: {round((len(invalid) / (len(invalid + valid))) * 100, 2)}%\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 749785/749785 [00:01<00:00, 488058.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid Marks: 6345086\n",
+      "Invalid Marks: 317325\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Percent invalid Marks: 4.76'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_count = 0\n",
+    "invalid_count = 1\n",
+    "\n",
+    "for m in tqdm(ALLMATCHES):\n",
+    "    # match attrs\n",
+    "    if isinstance(m._weight, wrestling.Mark):\n",
+    "        if not m._weight.isvalid:\n",
+    "            invalid_count += 1\n",
+    "        else:\n",
+    "            valid_count += 1\n",
+    "    # ts attrs\n",
+    "    for score in m.time_series:\n",
+    "        if score.label.isvalid:\n",
+    "            valid_count += 1\n",
+    "        elif not score.label.isvalid:\n",
+    "            invalid_count += 1\n",
+    "    # event attrs\n",
+    "    if isinstance(m.event._kind, wrestling.Mark):\n",
+    "        if not m.event._kind.isvalid:\n",
+    "            invalid_count += 1\n",
+    "        else:\n",
+    "            valid_count += 1\n",
+    "    # wrestler attrs\n",
+    "    if isinstance(m.focus._grade, wrestling.Mark):\n",
+    "        if not m.focus._grade.isvalid:\n",
+    "            invalid_count += 1\n",
+    "        else:\n",
+    "            valid_count += 1\n",
+    "    if isinstance(m.opponent._grade, wrestling.Mark):\n",
+    "        if not m.opponent._grade.isvalid:\n",
+    "            invalid_count += 1\n",
+    "        else:\n",
+    "            valid_count += 1\n",
+    "\n",
+    "        \n",
+    "\n",
+    "print(f\"Valid Marks: {valid_count}\")\n",
+    "print(f\"Invalid Marks: {invalid_count}\")\n",
+    "f\"Percent invalid Marks: {round(invalid_count / (valid_count + invalid_count) * 100, 2)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.005241753999144"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start = time.perf_counter()\n",
+    "time.sleep(5)\n",
+    "stop = time.perf_counter()\n",
+    "stop - start"
    ]
   },
   {
